# SyncMind

./: .gitignore  README.md  SECURITY.md  environment.yml  index.html  pyproject.toml  requirements.txt  setup.py
logs/: syncmind_logs.txt
scripts/: construction.sh  git.sh  syncbench.sh
source/: my_repo_dict.json
syncbench/: SyncBench.md  run_syncbench.py
syncbench/constructor/: callee.py  callee_builder.py  caller.py  caller_builder.py  instancer.py  syncbench.py
syncbench/evaluator/: builder.py  exetest.py  handler.py  tester.py
syncbench/utilizer/: aligner.py  function_filter.py  gitloader.py  method_filter.py  tracer.py
syncmind/: SyncMind.md
syncmind/framework/syncmind/: README.md  run_eval.py  run_infer.py
syncmind/framework/syncmind/builds/: config.py  prep.py
syncmind/framework/syncmind/evals/: evaluator.py  react_eval.py
syncmind/framework/syncmind/prompter/: recover_prompt.py
syncmind/framework/syncmind/runs/: runtime_complete.py  runtime_response.py
syncmind/updates/v1_syncmind/: run_infer.py
syncmind/updates/v1_syncmind/builds/: aligner.py
syncmind/updates/v1_syncmind/evals/: adapt_eval.py  evaluator.py
syncmind/updates/v1_syncmind/prompter/: know_agent.py  recover_prompt.py
syncmind/updates/v1_syncmind/runs/: final_eval.py  runtime_eval.py  runtime_response.py
syncmind/updates/v1_syncmind/scripts/: run_infer.sh
syncmind/updates/v2_syncmind/: README.md  run_infer.py
syncmind/updates/v2_syncmind/builds/: instance.py  json_util.py  loader.py
syncmind/updates/v2_syncmind/data/: my_repo_dict.json
syncmind/updates/v2_syncmind/evals/: adapt_eval.py
syncmind/updates/v2_syncmind/runs/: runtime_complete.py  runtime_eval.py  runtime_response.py
tests/: test_callee.py  test_caller.py  test_function_filter.py  test_method_filter.py  test_syncbench.py
utils/: default_config.py  env_config.py  json_util.py  logger.py
(+39 files in other folders)
